fix(docs): update filtering mode terminology from "Columns" to "Completion"

--- a/en/core-concepts/data-sampling-and-filtering.mdx
+++ b/en/core-concepts/data-sampling-and-filtering.mdx
@@ -29,11 +29,11 @@ Used to choose columns for calculating cycle time. In "Activity" filtering mode,
 
 ### Filtering Mode
 
-Determines how tasks are filtered. Two modes are available: "Activity" and "Columns". You can find a detailed description of these modes in the [Filtering Modes](/en/docs/core-concepts/filtering-modes) article.
+Determines how tasks are filtered. Two modes are available: "Activity" and "Completion". You can find a detailed description of these modes in the [Filtering Modes](/en/docs/core-concepts/filtering-modes) article.
 
 ### Completion Columns
 
-This parameter is only active in "Columns" filtering mode. It allows you to specify which columns, when passed through, mark a task as completed.
+This parameter is only active in "Completion" filtering mode. It allows you to specify which columns, when passed through, mark a task as completed.
 
 ## How It All Works Together
 
@@ -52,13 +52,13 @@ Let's say you want to analyze a specific team's work over the last month. Here's
 2. Use the "Team Alpha" quick filter (if you have such a filter on your board).
 3. Set the Timeframe to the last month.
 4. In Select Columns, choose the columns you want to analyze for task time spent. This will determine which stages of the workflow will be considered when calculating metrics.
-5. Choose the appropriate filtering mode (Activity or Columns).
+5. Choose the appropriate filtering mode (Activity or Completion).
 
 ## Usage Recommendations
 
 - Start with a broad sample, gradually narrowing it down using filters for more detailed analysis.
 - Experiment with different filter combinations to get the most useful data for you.
 - Use quick filters to quickly switch between different sets of tasks, for example, between different teams or types of work.
-- Remember that choosing a filtering mode can significantly affect the analysis results. Make sure you understand the difference between "Activity" and "Columns" modes.
+- Remember that choosing a filtering mode can significantly affect the analysis results. Make sure you understand the difference between "Activity" and "Completion" modes.
 
 Proper use of filters will allow you to get exactly the data you need for effective analysis and improvement of your work processes.
