--- a/en/reports/predictability-report.mdx
+++ b/en/reports/predictability-report.mdx
@@ -56,8 +56,8 @@ Below the chart are control elements:
 1. **Resolution**: Choose the time interval (day, week, month).
 2. **Select Swimlanes**: Filter by specific swimlanes.
 3. **Select Columns**: Choose columns for analysis.
-4. **Filtering Mode**: Select filtering mode (Activity/Columns).
-5. **Completion Columns**: Choose completion columns (for Columns mode).
+4. **Filtering Mode**: Select filtering mode (Activity/Completion).
+5. **Completion Columns**: Choose completion columns (for Completion mode).
 
 ## Practical Usage Tips
 
