--- a/en/reports/throughput-chart-report.mdx
+++ b/en/reports/throughput-chart-report.mdx
@@ -42,7 +42,7 @@ When analyzing the Throughput Chart, pay attention to the following aspects:
 
 ## Note on Filtering
 
-Unlike other reports, the Throughput Chart always uses the "Columns" mode for task filtering. The user cannot change this mode but can configure which columns are considered completing through the Completion Columns selection.
+Unlike other reports, the Throughput Chart always uses the "Completion" mode for task filtering. The user cannot change this mode but can configure which columns are considered completing through the Completion Columns selection.
 
 ## Usage Recommendations
 
