--- a/ru/core-concepts/data-sampling-and-filtering.mdx
+++ b/ru/core-concepts/data-sampling-and-filtering.mdx
@@ -29,11 +29,11 @@ JMP автоматически добавляет все быстрые филь
 
 ### Filtering Mode
 
-Определяет способ фильтрации задач. Доступны два режима: "Activity" и "Columns". Подробное описание этих режимов вы можете найти в статье [Режимы фильтрации](/ru/docs/core-concepts/filtering-modes).
+Определяет способ фильтрации задач. Доступны два режима: "Activity" и "Completion". Подробное описание этих режимов вы можете найти в статье [Режимы фильтрации](/ru/docs/core-concepts/filtering-modes).
 
 ### Completion Columns
 
-Этот параметр активен только в режиме фильтрации "Columns". Он позволяет указать колонки, прохождение через которые считается завершением задачи.
+Этот параметр активен только в режиме фильтрации "Completion". Он позволяет указать колонки, прохождение через которые считается завершением задачи.
 
 ## Как это работает вместе
 
