--- a/ru/core-concepts/filtering-modes.mdx
+++ b/ru/core-concepts/filtering-modes.mdx
@@ -1,54 +1,86 @@
 ---
 title: Режимы фильтрации
-description: Описание режимов фильтрации "Activity" и "Columns" в Jira Metrics Plugin.
+description: Понимание режимов фильтрации данных в Jira Metrics Plugin - как выбрать какие задачи включить в анализ.
 ---
 
-## Обзор режимов фильтрации
+## Что такое режимы фильтрации?
 
-JMP предоставляет два режима фильтрации задач: "Activity" и "Columns". Выбор режима осуществляется через параметр "Filtering Mode" в настройках отчета.
+**Важно:** Режимы фильтрации контролируют **какие задачи включаются** в ваш анализ, а не **как рассчитываются метрики**. Формулы расчета lead time, cycle time и других метрик остаются неизменными независимо от выбранного режима фильтрации.
+
+JMP предоставляет два режима фильтрации данных: **"Activity"** и **"Completion"**. Выбор режима осуществляется через параметр "Filtering Mode" в настройках отчета.
 
 ## Режим "Activity"
 
-В режиме "Activity" учитываются все задачи, которые были активны (т.е. находились в любой из выбранных колонок) в течение заданного временного промежутка.
+В режиме "Activity" задачи включаются, если они были **активны в любой из выбранных колонок** в течение заданного периода времени.
 
-### Особенности режима "Activity":
+### Как работает режим "Activity":
 
-- Охватывает все задачи, которые были в работе в выбранный период.
-- Подходит для анализа общей активности на доске.
-- Позволяет увидеть полную картину движения задач по доске.
+- **Критерий включения**: Задача включается, если у неё было любое движение или присутствие в выбранных колонках в течение временного промежутка
+- **Область применения**: Анализ общей активности рабочего процесса и выявление узких мест на всех этапах
+- **Объем данных**: Более широкий набор данных, включающий задачи "в работе" в течение периода
 
-## Режим "Columns"
+### Когда использовать режим "Activity":
 
-Режим "Columns" фильтрует задачи на основе их прохождения через указанные колонки завершения (Completion Columns) в заданном временном промежутке.
+- Общий анализ процесса и обзор рабочего потока
+- Выявление узких мест на всех этапах работы
+- Понимание общей активности команды и рабочей нагрузки
+- Анализ паттернов работы в процессе (WIP)
 
-### Особенности режима "Columns":
+## Режим "Completion"
 
-- Фокусируется на конкретных этапах процесса.
-- Позволяет анализировать время прохождения задач через определенные стадии.
-- При выборе этого режима активируется дополнительное поле "Completion Columns", где можно указать одну или несколько колонок для анализа.
+В режиме "Completion" задачи включаются только если они **завершились** (прошли через) указанные колонки завершения в течение заданного периода времени.
 
-### Логика работы режима "Columns":
+### Как работает режим "Completion":
 
-1. Задача учитывается, если она попала хотя бы в одну из указанных Completion Columns в заданном временном промежутке.
-2. Используется самая поздняя дата попадания задачи в любую из Completion Columns.
-3. Если после Completion Column был возврат в предыдущую колонку, то задача не учитывается в выборке.
+- **Критерий включения**: Задача включается только если она прошла через хотя бы одну из указанных "Completion Columns" в течение временного промежутка
+- **Дополнительная настройка**: При выборе этого режима становится активным поле "Completion Columns", где вы указываете какие колонки представляют завершение
+- **Логика завершения**:
+  1. Задача должна попасть хотя бы в одну Completion Column в течение периода времени
+  2. Используется самая поздняя дата попадания в любую из Completion Columns
+  3. Задачи, которые вернулись в предыдущие колонки после завершения, исключаются
 
-## Применение режимов фильтрации
+### Когда использовать режим "Completion":
 
-Выбор режима фильтрации влияет на следующие отчеты:
+- Анализ конкретных этапов процесса (например, время разработки, длительность тестирования)
+- Измерение производительности поставки и пропускной способности
+- Фокус на завершенной работе, а не на работе в процессе
+- Создание прогнозов поставки на основе исторических данных о завершении
 
-- Cycle Time
-- Aging Chart
-- Predictability
-- Tasks Table
+## Краткое сравнение различий
 
-Это обеспечивает единый подход к анализу данных во всех отчетах.
+| Аспект                       | Режим Activity                             | Режим Completion                                  |
+| ---------------------------- | ------------------------------------------ | ------------------------------------------------- |
+| **Включение данных**         | Задачи активные в выбранных колонках       | Задачи завершенные через указанные колонки        |
+| **Временная привязка**       | Любая активность в течение периода         | События завершения в течение периода              |
+| **Размер выборки**           | Обычно больше (включает работу в процессе) | Обычно меньше (только завершенная работа)         |
+| **Лучше всего для**          | Анализ процесса, выявление узких мест      | Анализ поставки, измерение пропускной способности |
+| **Дополнительные настройки** | Нет                                        | Требуется выбор "Completion Columns"              |
 
-## Рекомендации по выбору режима
+## Влияние на отчеты
 
-- Используйте режим "Activity" для общего анализа процесса и выявления узких мест на всех этапах работы.
-- Применяйте режим "Columns" для детального анализа конкретных этапов процесса, например, времени разработки или тестирования.
+**Все отчеты используют одинаковый режим фильтрации**, что обеспечивает консистентный анализ:
 
-## Заключение
+- **Lead Time**: Влияет на то, какие lead time задач измеряются
+- **Aging Chart**: Определяет какие задачи появляются в анализе старения
+- **Predictability**: Влияет на выборку задач для расчета предсказуемости
+- **Table View**: Контролирует какие задачи отображаются в детальном представлении
 
-Правильный выбор режима фильтрации позволяет получить наиболее релевантные данные для вашего анализа. Экспериментируйте с обоими режимами, чтобы лучше понять, какой из них наиболее эффективен для ваших конкретных задач и процессов.
+## Когда использовать каждый режим
+
+### Используйте режим "Activity":
+
+- Для анализа задач, которые были **активны** в выбранных колонках в течение периода времени
+- Чтобы увидеть всю работу, которая была в процессе, независимо от статуса завершения
+- Для анализа процесса и выявления узких мест
+
+### Используйте режим "Completion":
+
+- Для анализа только тех задач, которые **завершились** через указанные колонки в течение периода времени
+- Чтобы сосредоточиться на выполненной работе и измерить показатели завершения
+- Требует выбора колонок, которые представляют "завершение" для вашего рабочего процесса
+
+## Важные заметки
+
+- **Формулы метрик не изменяются**: Lead time всегда рассчитывается одинаково независимо от режима фильтрации
+- **Изменяется только выбор данных**: Разные задачи включаются в анализ, но расчеты остаются консистентными
+- **Экспериментируйте с обоими режимами**: Попробуйте оба, чтобы понять какой дает вам более полезные инсайты для ваших конкретных потребностей
