docs: clarify aging chart description in filtering modes documentation

--- a/en/core-concepts/filtering-modes.mdx
+++ b/en/core-concepts/filtering-modes.mdx
@@ -61,7 +61,7 @@ In "Completion" mode, tasks are included only if they **completed** (moved throu
 **All reports use the same filtering mode** you select, ensuring consistent analysis across:
 
 - **Lead Time**: Affects which tasks' lead times are measured
-- **Aging Chart**: Determines which tasks appear on the aging analysis
+- **Aging Chart**: Affects the data sample used for aging statistics calculations
 - **Predictability**: Influences the task sample for predictability calculations
 - **Table View**: Controls which tasks are displayed in the detailed view
 
