--- a/ru/core-concepts/filtering-modes.mdx
+++ b/ru/core-concepts/filtering-modes.mdx
@@ -61,7 +61,7 @@ JMP предоставляет два режима фильтрации данн
 **Все отчеты используют одинаковый режим фильтрации**, что обеспечивает консистентный анализ:
 
 - **Lead Time**: Влияет на то, какие lead time задач измеряются
-- **Aging Chart**: Определяет какие задачи появляются в анализе старения
+- **Aging Chart**: Влияет на выборку данных для расчета статистики старения
 - **Predictability**: Влияет на выборку задач для расчета предсказуемости
 - **Table View**: Контролирует какие задачи отображаются в детальном представлении
 
